aks-ingress.yaml
# NOTE: Nginx Ingress Controllerのrewrite-pathが完全に無視されてる...。パスが何も書き変わらない

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: aks-ingress
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: aks-ingress.dab7cb6b8e54438fa211.japaneast.aksapp.io
    http:
      paths:
      - path: /service1/
        backend:
          serviceName: service1
          servicePort: 10001
      - path: /service2/
        backend:
          serviceName: service2
          servicePort: 10002
      - path: /service3/
        backend:
          serviceName: service3
          servicePort: 10003
      - path: /service4/
        backend:
          serviceName: service4
          servicePort: 10004
  backend:
    serviceName: service-default
    servicePort: 8888
